Fix adding new fields to table (#256)